--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,6 +1,12 @@
 <header>
   <nav>
     <a href="/">Home</a>
+    <a href="/movies">Movies</a>
+    <a href="/alerts">Alerts</a>
+    <a href="/dashboard">Admin</a>
+    <a href="/login">Login</a>
     <!-- Add more navigation links as needed -->
   </nav>
+  <link rel="stylesheet" href="/css/style.css">
+
 </header>
