--- a/src/views/admin/login.ejs
+++ b/src/views/admin/login.ejs
@@ -12,4 +12,13 @@
   <button type="submit">Login</button>
 </form>
 
+<button type="button" onclick="window.location.href='/admin/dashboard'">Back to Dashboard</button>
+<% if (typeof success !== 'undefined') { %>
+  <div class="alert alert-success"><%= success %></div>
+<% } %>
+<p>Don't have an account? <a href="/register">Register here</a></p>
+<% if (typeof message !== 'undefined') { %>
+  <div class="alert alert-info"><%= message %></div>
+<% } %>
+
 <%- include('../partials/footer') %>
